# Apache-Airflow

./: README.md
docker/: Dockerfile  docker-compose.yml  pyproject.toml
docker/config/: tool.yml
docker/src/dags/: notification.py  predict.py  predict_xgb.py  test_dag.py  update_consumption.py  update_model.py
docker/src/utils/: smart1_api.py
