[project]
name = "docker"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Savvin Nikita", email = "savvin.nikit@yandex.ru"},
]
dependencies = [
    "tensorflow>=2.18.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
